--- a/web/modules/custom/giv_din_stemme/templates/components/button-microphone-toggle.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/components/button-microphone-toggle.html.twig
@@ -1,4 +1,4 @@
-<div id="btn-microphone-toggle" class="btn-microphone-toggle rounded-full flex place-content-center w-20 h-20 cursor-pointer text-center bg-brand visualizer-shadow">
+<button id="btn-microphone-toggle" class="btn-microphone-toggle rounded-full flex place-content-center w-20 h-20 text-center bg-brand hover:bg-orange-700 visualizer-shadow transition">
     <i class="text-white text-3xl fa-solid fa-microphone-slash place-self-center"></i>
     <i class="text-white text-3xl fa-solid fa-microphone place-self-center"></i>
-</div>
+</button>
