--- a/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
@@ -2,7 +2,7 @@
 {% endblock %}
 
 <section class="content drop-shadow-md m-3 md:m-0">
-  <main class="main bg-white px-5 rounded-t py-3">
+  <main class="main bg-white px-5 rounded-t pt-3">
     <h1>{{ drupal_title() }}</h1>
     {% block gds_content %}
     {% endblock %}
