--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -18,10 +18,11 @@
       </p>
     </div>
     <div class="-mx-5 mb-5 pb-5 border-b-2"></div>
-    <div id="microphone-allowed-display" class="hidden shadow-mic-button bg-orange-600 my-16 mx-auto rounded-full w-20 h-20 text-center">
-      <div class="align-middle table-cell">
-        <i class="text-white text-3xl fa-solid fa-microphone"></i>
+    <div id="microphone-allowed-display" class="hidden">
+      <div class="flex place-content-center my-5">
+        {% include "@giv_din_stemme/components/button-microphone-toggle.html.twig" %}
       </div>
+      <p>{{ 'Access to microphone successfully granted. Continue to test the settings'|t }}</p>
     </div>
     <div id="microphone-disallowed-display" class="bg-gray-400 my-16 mx-auto rounded-full table w-20 h-20 cursor-pointer text-center">
       <div class="align-middle table-cell">
