--- a/web/themes/custom/giv_din_stemme_theme/templates/page--user--%.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/page--user--%.html.twig
@@ -47,7 +47,7 @@
 #}
 {{ include(directory ~ '/templates/components/header.html.twig') }}
 <div class="max-w-3xl mx-auto">
-  <main role="main" class="mb-5">
+  <main role="main" class="mx-3 md:mx-0 mb-5">
     <a id="main-content" tabindex="-1"></a>
     {{ page.content }}
   </main>
