--- a/web/themes/custom/giv_din_stemme_theme/templates/html.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/html.html.twig
@@ -47,8 +47,8 @@
       {{ page }}
       {{ page_bottom }}
     </div>
-    <img class="-z-50 fixed object-cover object-center min-h-80 w-full bottom-0" src="/{{ directory }}/background.svg"/>
-    <img class="-z-45 p-3 md:m-0 md:fixed md:left-5 md:bottom-5" src="/{{ directory }}/doner-din-stemme-logo.svg"/>
+    <img class="-z-50 fixed object-cover object-center min-h-80 w-full bottom-0" src="/{{ directory }}/background.svg" alt="" />
+    <img class="-z-45 p-3 md:m-0 md:fixed md:left-5 md:bottom-5" src="/{{ directory }}/doner-din-stemme-logo.svg" alt="" />
     <js-bottom-placeholder token="{{ placeholder_token }}">
   </body>
 </html>
