--- a/web/themes/custom/giv_din_stemme_theme/templates/components/global-navigation.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/global-navigation.html.twig
@@ -1,10 +1,10 @@
 <div id="globalNavigation" class="hidden">
   <div role="nav" class="bg-primary text-primary absolute top-0 left-0 w-96 drop-shadow-md p-5 h-screen z-20 rounded-r-md border-r border-t border-primary">
-    <header class="flex">
+    {# <header class="flex">
       <button class="ms-auto" id="btnCloseGlobalNavigation">
         <i class="fa-solid fa-xmark"></i>
       </button>
-    </header>
+    </header> #}
     <main class="text-primary">
       {{ page.global_navigation_menu }}
     </main>
