--- a/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/modal.html.twig
@@ -5,7 +5,7 @@
     </div>
     <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
     <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6"
-         role="dialog" aria-modal="true" aria-labelledby="modal-headline">
+         role="dialog" aria-modal="true" aria-labelledby="{{ modal_headline }}">
       <div class="block absolute top-0 right-0 pt-4 pr-4">
         <button modal-id="{{ modal_id }}" type="button" data-behavior="cancel" class="btnCloseModal bg-white rounded-md text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
           <span class="sr-only">Close</span>
