2192: Use real link with underline to comply with WCAG

--- a/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/permissions-page.html.twig
@@ -14,7 +14,7 @@
         {{ 'To record the sound you must grant us access to use the microphone on your device. Press the microphone icon next to the address bar, and click Allow in the popup that appears in your browser.'|t }}
       </p>
       <p>
-          {{ 'If you encounter a problem see: ' }} <span modal-id="{{ modal_id }}" class="underline cursor-pointer btnOpenModal">{{ 'Help for permissions'|t }}</span>.
+          {{ 'If you encounter a problem see: ' }} <a href="javascript:void" modal-id="{{ modal_id }}" class="underline btnOpenModal">{{ 'Help for permissions'|t }}</a>.
       </p>
     </div>
     <div class="-mx-5 mb-5 pb-5 border-b-2"></div>
