--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -29,8 +29,8 @@
 {% block gds_footer %}
   <div class="py-5">
     <form action="{{ nextUrl }}" method="post" enctype="multipart/form-data">
-      <input type="file" name="file" id="audio_input" hidden>
-      <input type="number" id="recording_duration" name="duration" hidden>
+      <input type="hidden" name="file" id="audio_input">
+      <input type="hidden" id="recording_duration" name="duration">
       <div class="grid grid-cols-2">
         <div class="sm:col-span-1">
         </div>
