--- a/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/landing-page.html.twig
@@ -8,11 +8,8 @@
   <main class="main px-5">
     <h1 class="text-5xl">{{ drupal_title() }}</h1>
     <div class="py-5 grid md:grid-cols-2 md:gap-x-6 text-lg text-gray-500">
-      <div class="col-span-1">
-        <p class="font-light">{{ 'Voice recording is necessary to train our danish language model.'|t }}</p>
-        <div class="my-5">
-          <span modal-id="terms-modal" class="cursor-pointer btnOpenModal text-black">{{ 'Read our terms'|t }}</span>
-        </div>
+      <div class="col-span-1 mb-10">
+        {{ front_page_text|raw }}
       </div>
       <div class="col-span-1">
         <p>
