Changed display of static page

--- a/web/themes/custom/giv_din_stemme_theme/templates/node.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/node.html.twig
@@ -1,5 +1,8 @@
-<div class="bg-white drop-shadow-md p-5">
-    <div>
-        {{ content }}
+<div class="content drop-shadow-md m-3 md:m-0">
+  <div class="main bg-white px-5 rounded-t pt-3">
+    <h1>{{ label }}</h1>
+    <div class="py-5 static-content">
+      {{ content }}
     </div>
+  </div>
 </div>
