--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -119,5 +119,23 @@
   .btn-microphone-toggle .fa-microphone-slash {
     display: none;
   }
+
+    /* Static content */
+
+  .static-content ul {
+     @apply list-disc list-inside;
+  }
+
+  .static-content ol {
+    @apply list-decimal list-inside;
+  }
+
+  .static-content a {
+    @apply underline;
+  }
+
+  .static-content blockquote {
+    @apply italic border-l-2 ml-3 pl-3;
+  }
 }
 
