Added content pages

--- a/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/consent-page.html.twig
@@ -14,7 +14,7 @@
     <div class="mb-5 pb-5 border-b-2"></div>
     <div class="consent-text max-h-52 overflow-y-scroll">
       <p>
-        {% include "@giv_din_stemme_theme/texts/consent-text.html" %}
+        {{ consent_text|raw }}
       </p>
     </div>
   </div>
