--- a/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/thank-you-page.html.twig
@@ -9,11 +9,11 @@
   <div class="py-5">
     <form action="/start-donating">
       <div class="grid grid-cols-2">
-        <div class="sm:col-span-1">
+        <div class="sm:col-span-1 mt-2 justify-self-start">
         </div>
         <div class="sm:col-span-1 justify-self-end">
           <button type="submit" class="btn-default">
-            <span class="mr-3">{{ 'Dontate more'|t }}</span>
+            <span class="mr-3">{{ 'Donate more'|t }}</span>
             <i class="fa-solid fa-circle-arrow-right"></i>
           </button>
         </div>
