Revert "2201: Add styling for static content"
This reverts commit a99e38c4465a5bc7cc26a56b4fabe5c30f316878.

--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -123,9 +123,10 @@
     display: none;
   }
 
-  /* Static content */
+    /* Static content */
+
   .static-content ul {
-    @apply list-disc list-inside mb-3;
+     @apply list-disc list-inside;
   }
 
   .static-content ul ul {
