2203: Markup for progress bar

--- a/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/gds-page-wrapper.html.twig
@@ -7,6 +7,8 @@
     {% block gds_content %}
     {% endblock %}
   </main>
+  {% block gds_progress %}
+  {% endblock %}
   <footer class="footer bg-gray-100 px-5 rounded-b">
     {% block gds_footer %}{% endblock %}
   </footer>
