--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -38,13 +38,13 @@
 
   /* Define common buttons */
   .btn-primary {
-    @apply border border-brand bg-brand text-white rounded-lg px-3 py-2 min-h-9 hover:bg-orange-700 transition-colors;
+    @apply border border-brand bg-brand text-white rounded-lg px-3 py-2 min-h-9 hover:bg-orange-700 hover:border-orange-700 transition-colors;
   }
   .btn-secondary {
-    @apply border border-brand bg-orange-700 text-white rounded-lg px-3 py-2 min-h-9 hover:bg-orange-700 transition-colors;
+    @apply border border-gray-300 bg-gray-300 text-gray-900 rounded-lg px-3 py-2 min-h-9 hover:bg-gray-400 hover:text-gray-950 hover:border-gray-400 transition-colors;
   }
   .btn-default {
-    @apply border border-secondary bg-black text-white rounded-lg px-3 py-2 min-h-9 hover:bg-stone-700 transition-colors;
+    @apply border border-black bg-black text-white rounded-lg px-3 py-2 min-h-9 hover:bg-stone-700 hover:border-stone-700 transition-colors;
   }
   .btn-danger {
     @apply border border-secondary bg-red-600 text-white rounded-lg px-3 py-2 min-h-9 hover:bg-red-700 transition-colors;
