--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -10,7 +10,7 @@
       <div class="mb-5 pb-5 border-b-2"></div>
     </div>
 
-    <div class="relative flex flex-col md:flex-row md:gap-5 md:min-h-36">
+    <div class="relative flex flex-col md:flex-row md:gap-5 md:min-h-36 md:py-16">
       <div class="consent-text max-h-52 overflow-y-auto flex align-content-center grow">
         <p class="text-xl mx-3 md:mx-5">
           {{ textToRead }}
