--- a/web/modules/custom/giv_din_stemme/templates/components/button-microphone-toggle.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/components/button-microphone-toggle.html.twig
@@ -1,5 +1,5 @@
 <button id="btn-microphone-toggle" class="btn-microphone-toggle rounded-full flex place-content-center w-20 h-20 text-center bg-brand hover:bg-orange-700 visualizer-shadow transition">
-    <i class="text-white text-3xl fa-solid fa-microphone-slash place-self-center"></i>
-    <i class="text-white text-3xl fa-solid fa-microphone place-self-center"></i>
+    <i id="icon-stop" class="text-white text-3xl fa-solid fa-stop place-self-center"></i>
+    <i id="icon-record"  class="text-white text-3xl fa-solid fa-microphone place-self-center"></i>
     <span class="sr-only">{{ "Toggle microphone on / off"|t }}</span>
 </button>
