--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -43,15 +43,15 @@
         <input type="file" name="file" id="audio_input" hidden>
         <input type="hidden" id="recording_duration" name="duration">
       </div>
-      <div class="grid grid-cols-2">
-        <div class="sm:col-span-1 justify-self-start">
+      <div class="flex flex-col gap-3 md:grid md:grid-cols-2">
+        <div class="sm:col-span-1 justify-self-start order-2 md:order-1">
           {% if has_next %}
             <button type="submit" class="btn-secondary" name="action" value="finish" disabled>
               {{ 'Save and finish'|t }}
             </button>
           {% endif %}
         </div>
-        <div class="sm:col-span-1 justify-self-end">
+        <div class="sm:col-span-1 justify-self-end order-1 md:order-2">
           <button type="submit" class="btn-default" name="action" value="continue" disabled>
             <span class="mr-3">
               {{ has_next ? 'Save and continue'|t : 'Save and finish'|t }}
