--- a/web/themes/custom/giv_din_stemme_theme/templates/form--user-form.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/form--user-form.html.twig
@@ -15,6 +15,6 @@
 <div class="-mx-5 px-5 pt-10 pb-5 border-b-2">
   {{ 'Fill out your profile to help us utilize your donation.'|t }}
 </div>
-<form{{ attributes.addClass('grid gap-4 grid-cols-2 pt-10') }}>
+<form{{ attributes.addClass('md:grid md:grid-cols-2 md:gap-5 pt-10') }}>
   {{ children }}
 </form>
