--- a/web/modules/custom/giv_din_stemme/templates/test-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/test-page.html.twig
@@ -6,6 +6,15 @@
 
 {% block gds_content %}
   {{ attach_library('giv_din_stemme/test_microphone') }}
+
+  {% if is_safari_on_ios|default(false) %}
+    <div class="iphone-on-ios">
+      {{ 'Safari on iOS needs further microphone permissions. Read more about <a href=":help_url">settings the permissions</a>.'|t({
+        ':help_url': safari_on_ios_help_url
+      }) }}
+    </div>
+  {% endif %}
+
   <div class="py-5">
     <div class="consent-intro text-lg">
       <p>
