--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -9,7 +9,11 @@
       </div>
       <div class="mb-5 pb-5 border-b-2"></div>
     </div>
-
+    <div class="mx-3 md:mx-5 flex justify-items-center">
+      {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'info', message: 'You are ready to record, press the button to start'|t }) }}
+      {# {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'warning', message: 'Your recording was stopped because it reached the max-length '|t }) }} #}
+      {# {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'danger', message: 'Recording - Press button again when you have finished reading'|t }) }} #}
+    </div>
     <div class="relative flex flex-col md:flex-row md:gap-5 md:min-h-36 md:py-16">
       <div class="consent-text max-h-52 overflow-y-auto flex align-content-center grow">
         <p class="text-xl mx-3 md:mx-5">
