--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -149,7 +149,8 @@
     @apply mb-1;
   }
 
-  .static-content a {
+  .static-content a,
+  .content a {
     @apply underline;
   }
 
@@ -164,5 +165,22 @@
   input.error,
   select.error {
     @apply border-red-600;
+  }
+
+  /* Alerts */
+  .alert {
+    @apply flex px-3 py-1 rounded border;
+  }
+  .alert-info {
+    @apply bg-blue-100 text-blue-700  border-blue-300;
+  }
+  .alert-success {
+    @apply bg-green-100 text-green-700  border-green-300;
+  }
+  .alert-warning {
+    @apply bg-yellow-100 text-yellow-700  border-yellow-300;
+  }
+  .alert-danger {
+    @apply bg-red-100 text-red-700  border-red-300;
   }
 }
