2213: Apply coding standards

--- a/web/themes/custom/giv_din_stemme_theme/templates/components/status-message.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/status-message.html.twig
@@ -22,7 +22,6 @@
  */
 #}
 
-
 {%
     set classes = [
         'alert mx-auto mb-5',
@@ -35,10 +34,10 @@
 
 {%
     set icon = {
-        'info' : 'fa-circle-info',
-        'success' : 'fa-circle-check',
-        'warning' : 'fa-triangle-exclamation',
-        'danger' : 'fa-triangle-exclamation',
+        info: 'fa-circle-info',
+        success: 'fa-circle-check',
+        warning: 'fa-triangle-exclamation',
+        danger: 'fa-triangle-exclamation',
     }[type]|default('')
 %}
 
