--- a/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
+++ b/web/modules/custom/giv_din_stemme/templates/read-page.html.twig
@@ -10,9 +10,10 @@
       <div class="mb-5 pb-5 border-b-2"></div>
     </div>
     <div class="mx-3 md:mx-5 flex justify-items-center">
-      {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'info', message: 'You are ready to record, press the button to start'|t }) }}
-      {# {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'warning', message: 'Your recording was stopped because it reached the max-length '|t }) }} #}
-      {# {{ include(directory ~ '/templates/components/status-message.html.twig', {type: 'danger', message: 'Recording - Press button again when you have finished reading'|t }) }} #}
+      {{ include(directory ~ '/templates/components/status-message.html.twig', {id: 'start_recording_message', type: 'info', message: 'You are ready to record, press the button to start'|t, aria_hidden: false }) }}
+      {{ include(directory ~ '/templates/components/status-message.html.twig', {id: 'stop_recording_message', type: 'danger', message: 'Recording - Press button again when you have finished reading'|t, hidden_class: true, aria_hidden: true }) }}
+      {{ include(directory ~ '/templates/components/status-message.html.twig', {id: 'manually_stopped_recording_message', type: 'warning', message: 'Your recording was stopped'|t, hidden_class: true, aria_hidden: true }) }}
+      {{ include(directory ~ '/templates/components/status-message.html.twig', {id: 'automatically_stopped_recording_message', type: 'warning', message: 'Your recording was stopped because it reached the max-length'|t, hidden_class: true, aria_hidden: true }) }}
     </div>
     <div class="relative flex flex-col md:flex-row md:gap-5 md:min-h-36 md:py-16">
       <div class="consent-text max-h-52 overflow-y-auto flex align-content-center grow">
