--- a/web/themes/custom/giv_din_stemme_theme/templates/components/status-message.html.twig
+++ b/web/themes/custom/giv_din_stemme_theme/templates/components/status-message.html.twig
@@ -42,7 +42,7 @@
     }[type]|default('')
 %}
 
-<div id="{{ id }}" role="alert" aria-label="{{ type }}" {{ attributes.addClass(classes) }} aria-hidden="{{ aria_hidden ? "true" : "false" }}">
+<div id="{{ id }}" role="alert" aria-label="{{ type }}" {{ attributes.addClass(classes) }} aria-hidden="{{ aria_hidden ? 'true' : 'false' }}">
     <div class="order-1 order-md-0">
         <i class="fa-solid {{ icon }}"></i>
         {{ message }}
