--- a/web/themes/custom/giv_din_stemme_theme/styles.css
+++ b/web/themes/custom/giv_din_stemme_theme/styles.css
@@ -168,7 +168,13 @@
 
   /* Alerts */
   .alert {
-    @apply flex px-3 py-1 rounded border;
+    @apply flex mx-auto mb-5 md:mb-0 rounded border;
+  }
+  .alert-sm {
+    @apply px-3 py-1;
+  }
+  .alert-lg {
+    @apply px-5 py-3;
   }
   .alert-info {
     @apply bg-blue-100 text-blue-700  border-blue-300;
